--- a/www/internal/home.html
+++ b/www/internal/home.html
@@ -1,6 +1,6 @@
 
 <input type="button" onclick="loadURL('internal/direct.html');" 	value="Direct Connect" 		id="btnHomeDirect"		data-icon="star" 	data-iconpos="left"/>
-<input type="button" onclick="navigator.notification.alert('Not yet available.', null, AlertTitle, 'OK');"			value="Internet Connect" 	id="btnHomeInternet"	data-icon="star" 	data-iconpos="left"/>
+<input type="button" onclick="navigator.notification.alert('Not yet available.');"			value="Internet Connect" 	id="btnHomeInternet"	data-icon="star" 	data-iconpos="left"/>
 <input type="button" onclick="loadURL('internal/library.html');"	value="Manage Libraries" 		id="btnHomeLibrary"		data-icon="star" 	data-iconpos="left"/>
 <input type="button" onclick="loadURL('internal/options.html');"	value="Options" 			id="btnHomeOptions"		data-icon="star" 	data-iconpos="left"/>
 <input type="button" onclick="openURL('http://www.verdegro.com');"	value="Website Verdegro" 	id="btnHomeWebsite"		data-icon="star" 	data-iconpos="left"/>
