--- a/www/internal/control.html
+++ b/www/internal/control.html
@@ -144,4 +144,4 @@
 </div>
 
 
-<script type="text/javascript" src="js/internal/direct.js"></script> 		
+<script type="text/javascript" src="js/internal/control.js"></script> 		
